--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
+  <title>Fotomatic</title>
   <meta charset="UTF-8">
 </head>
 <body>
@@ -100,7 +101,7 @@
       </div>
     </div>
 
-    <!-- Quotes Section
+    <!-- Quotes Section -->
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
